# python_http_parser

./: .gitignore  .rstcheck.cfg  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  mypy.ini  pyproject.toml  script-run  setup.cfg  setup.py
.github/workflows/: publish.yml  run_tests.yml
bench/: __main__.py  bench_chunked_body.py  bench_stream_req.py  bench_stream_res.py  context.py  data.py  run.py  run_profile.py
bench/mod/: __init__.py  bench.py  context.py  profile.py
docs/: API.rst  README.rst  conf.py  constants.rst  errors.rst  index.rst  main.rst  requirements.txt
docs/api/: body.rst  constants.rst  errors.rst  index.rst  stream.rst
docs/api/helpers/: events.rst
docs/modules/: body.rst  constants.rst  errors.rst  stream.rst
docs/modules/helpers/: events.rst
python_http_parser/: __init__.py  __init__.pyi  __private.py  body.py  bytedata.py  constants.py  constants.pyi  errors.py  stream.py  utils.py  utils.pyi
python_http_parser/helpers/: events.py  newline.py
requirements/: build.txt  deps.txt  dev.txt  linting.txt  test.txt
tests/: __init__.py  context.py  test_basic.py  test_body_processor.py  test_options.py  test_parse.py  test_parse_fails.py  test_stream.py  test_stream_fails.py  test_with_body.py
