[build-system]
requires = ["setuptools>=39.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
warn_unused_configs = true
exclude = '(?:build/|dist/|python_http_parser.egg-info/|setup.*|docs/)'

[tool.pytest.ini_options]
python_files =["test_*.py", "bench_*.py"]
python_functions = ["test_*", "bench_*"]
