# TODO: Finish this file.
[metadata]
name = python_http_parser
version = 0.1.0
description = HTTP parser and stringifier written in pure python.
long_description = file: README.md
long_description_content_type = text/x-rst
url = https://github.com/Take-Some-Bytes/python_http_parser
project_urls =
  Documentation = https://github.com/Take-Some-Bytes/python_http_parser/tree/master/docs
  Bugs = https://github.com/Take-Some-Bytes/python_http_parser/issues
author = Horton Cheng
author_email = horton0712@gmail.com
license = MIT License
classifiers =
  Development Status :: 1 - Planning
  Environment :: Web Environment
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.0
  Programming Language :: Python :: 3.1
  Programming Language :: Python :: 3.2
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Internet
  Topic :: Internet :: WWW/HTTP
  Topic :: Utilities
  Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = python_http_parser
include_package_data = true
zip_safe = false
python_requires = >= 3
tests_require =
  pytest
install_requires =
  docutils >= 0.16
