[metadata]
name = python_http_parser
version = 0.3.0
description = HTTP parser and stringifier written in pure python.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Take-Some-Bytes/python_http_parser
project_urls =
  Documentation = https://github.com/Take-Some-Bytes/python_http_parser/tree/v0.3.0/docs
  Bugs = https://github.com/Take-Some-Bytes/python_http_parser/issues
author = Take-Some-Bytes
author_email = horton0712@gmail.com
license = MIT License
classifiers =
  Development Status :: 2 - Pre-Alpha
  Environment :: Web Environment
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Internet
  Topic :: Internet :: WWW/HTTP
  Topic :: Utilities
  Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = python_http_parser
include_package_data = true
zip_safe = false
python_requires = >= 3
extras_require =
  docutils>=0.16
  pep517>=0.10.0
  pylint>=2.7.2
  pytest>=6.2.2
  rstcheck>=3.3.1
